--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import-normalize; /* bring in normalize.css styles */
 
 body {
+  display: flex;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -12,4 +13,19 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  margin-left: auto;
+  margin-right: auto;
+
+  margin-top: 50px;
+  border: 2px solid black;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: lightgray;
+}
+
+ul {
+  list-style: none;
 }
